# ai-code

./: README.md
rust/: CHANGELOG.md  Cargo.toml  run_claw.sh
rust/.claw-agents/: agent-1776191068041519641.json  agent-1776191068041519641.md  agent-1776191068258680773.json  agent-1776191068258680773.md  agent-1776191683995948021.json  agent-1776191683995948021.md  agent-1776191684236750150.json  agent-1776191684236750150.md  agent-1776191775357505919.json  agent-1776191775357505919.md  agent-1776191775587140228.json  agent-1776191775587140228.md  agent-1776191908640799556.json  agent-1776191908640799556.md  agent-1776191908903759481.json  agent-1776191908903759481.md  agent-1776192432255373063.json  agent-1776192432255373063.md  agent-1776192432480432986.json  agent-1776192432480432986.md  agent-1776192526184814032.json  agent-1776192526184814032.md  agent-1776192526416209745.json  agent-1776192526416209745.md  agent-1776192709197791461.json  agent-1776192709197791461.md  agent-1776192709426285954.json  agent-1776192709426285954.md  agent-1776192804748348833.json  agent-1776192804748348833.md  agent-1776192805572823193.json  agent-1776192805572823193.md  agent-1776193119256524464.json  agent-1776193119256524464.md  agent-1776193119503443293.json  agent-1776193119503443293.md  agent-1776193154846078769.json  (+27 more)
rust/crates/bridge/: Cargo.toml
rust/crates/bridge/src/: api_client.rs  bridge_main.rs  jwt_utils.rs  lib.rs  session_runner.rs  types.rs  work_secret.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bundled_skills.rs  compact.rs  config.rs  config_hot_reload.rs  conversation.rs  hooks.rs  large_output.rs  lib.rs  load_skills_dir.rs  mcp_skill_builders.rs  mcp_stdio.rs  mcp_websocket.rs  oauth.rs  progress.rs  remote.rs  session.rs  session_persistence.rs  skill_watcher.rs  streaming.rs  usage.rs
(+14 files in other folders)
