[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime = { path = "../runtime" }
api = { path = "../api" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.21"
base64-url = "2.0"

[dev-dependencies]
tokio-test = "0.4"
