[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.5"

[lints]
workspace = true
