[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.10"
glob = "0.3"
log = "0.4"
lsp = { path = "../lsp" }
plugins = { path = "../plugins" }
regex = "1"
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
walkdir = "2"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
